@@ -1,5 +1,6 @@
 require 'test/unit'
 require 'rubygems'
+require 'sources'
 
 class TestGem < Test::Unit::TestCase
 
@@ -14,6 +15,10 @@ class TestGem < Test::Unit::TestCase
 
     assert_equal expected, Gem.configuration
     assert_equal true, Gem.configuration.verbose, 'method_missing on Hash'
+  end
+
+  def test_self_loaded_specs
+    assert_equal true, Gem.loaded_specs.keys.include?('sources')
   end
 
 end
