@@ -1,3 +1,8 @@
+2006-12-15  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems.rb (Gem::loaded_specs): Expose list of currently loaded
+	gems.
+
 2006-12-14  Eric Hodel  <drbrain@segment7.net>
 
 	* post-install.rb: Don't attempt to read unreadable files.  Fixes
